example/lib/src/generated/errors/errors_localization_id.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Indonesian (`id`).
class ErrorsLocalizationId extends ErrorsLocalization {
  ErrorsLocalizationId([String locale = 'id']) : super(locale);

  @override
  String get error => 'Terjadi kesalahan';

  @override
  String get unexpectedError => 'Terjadi kesalahan yang tidak terduga';

  @override
  String get bugReportSentText => 'Laporan bug berhasil dikirim.';
}
